--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -23,9 +23,10 @@
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
             <td>
-                <a th:href="@{/product/delete/{id}(id=${product.productId})}"
-                   class="btn btn-danger btn-sm"
-                   onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
+                <form th:action="@{/product/delete/{id}(id=${product.productId})}" method="post" style="display:inline;">
+                    <button type="submit" class="btn btn-danger btn-sm"
+                            onclick="return confirm('Are you sure you want to delete this product?')">Delete</button>
+                </form>
                 <a th:href="@{/product/edit/{id}(id=${product.productId})}"
                    class="btn btn-primary btn-sm">Edit</a>
             </td>
